--- a/menu/css/media-style.css
+++ b/menu/css/media-style.css
@@ -1,40 +1,29 @@
 /* ===================================  For PC  --Start--  =================================== */
 @media screen and (min-width: 767px){
 	.menu__list {
-		display: -webkit-box;
-			display: -ms-flexbox;
-				display: flex;
-		-webkit-box-align: center;
-			-ms-flex-align: center;
-				align-items: center;
+		display: flex;
+		align-items: center;
 	}
 	.menu__list > li {
 		padding: 10px 0px;
 	}
 	.menu__sub_list {
-		-webkit-transform: translate(0px, 10%);
-			transform: translate(0px, 10%);
+		transform: translate(0px, 10%);
 		opacity: 0;
 		visibility: hidden;
 		pointer-events: none;
-		-webkit-transition: all 0.3s ease 0s;
-			-o-transition: all 0.3s ease 0s;
-				transition: all 0.3s ease 0s;
+		transition: all 0.3s ease 0s;
 	}
 	body._mobile .menu__list_sublist._active .menu__sub_list {
 		opacity: 1;
 		visibility: visible;
-		-webkit-transform: translate(0px, 0px);
-			-ms-transform: translate(0px, 0px);
-			transform: translate(0px, 0px);
+		transform: translate(0px, 0px);
 		pointer-events: all;
 		cursor: pointer;
 		display: block;
 	}
 	body._mobile .menu__list_sublist._active .menu__arrow {
-		-webkit-transform: rotate(-180deg);
-			-ms-transform: rotate(-180deg);
-				transform: rotate(-180deg);
+		transform: rotate(-180deg);
 	}
 @supports (-webkit-appearance:none){}
 }
@@ -65,9 +54,7 @@
 		position: absolute;
 		height: 10%;
 		width: 100%;
-		-webkit-transition: all 0.3s ease 0s;
-			-o-transition: all 0.3s ease 0s;
-				transition: all 0.3s ease 0s;
+		transition: all 0.3s ease 0s;
 		background-color: #ffffff;
 		box-shadow: 0px 0px 3px #ffffff;
 	}
@@ -105,11 +92,9 @@
 		right: -100%;
 		width: 100%;
 		height: 100%;
-		-webkit-transition: right 0.5s ease 0s;
-			-o-transition: right 0.5s ease 0s;
-				transition: right 0.5s ease 0s;
-		background-color: rgba(0, 0, 0, 0.85);
 		padding: 100px 30px 30px 30px;
+		transition: right 0.5s ease 0s;
+		background-color: rgba(0, 0, 0, 0.95);
 		overflow-y: auto;
 	}
     .menu__body._active::before {
@@ -134,12 +119,8 @@
 		justify-content: center;
 	}
 	.menu__list li {
-		display: -webkit-box;
-			display: -ms-flexbox;
-				display: flex;
-		-webkit-box-pack: center;
-			-ms-flex-pack: center;
-				justify-content: center;
+		display: flex;
+		justify-content: center;
 	}
 	.menu__list > li {
 		flex-wrap: wrap;
@@ -151,7 +132,6 @@
 		margin: 20px 0px;
 	}
 	/* ====================  Menu body  --End--  ==================== */
-	
 	/* ====================  Dropdown list  --Start--  ==================== */
 	.menu__list > li._active .menu__sub_list{
 		display: block;
@@ -160,22 +140,16 @@
 		transform: rotate(-180deg);
 	}
 	.menu__sub_list {
+		margin: 10px 0px 0px;
 		position: relative;
 		background-color: #ffffff;
-		margin: 10px 0px 0px 0px;
 		display: none;
 	}
 	.menu__list_sublist-text {
-		display: -webkit-box;
-			display: -ms-flexbox;
-				display: flex;
-		-webkit-box-pack: center;
-			-ms-flex-pack: center;
-				justify-content: center;
-		-webkit-box-align: center;
-			-ms-flex-align: center;
-				align-items: center;
 		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		flex-wrap: nowrap;
 	}
 	.menu__arrow {
