--- a/menu/css/style.css
+++ b/menu/css/style.css
@@ -6,12 +6,7 @@
     border: 0;
 }
 *, *::before, *::after {
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
-}
-:focus, :active,
-a:focus, a:active {
-    outline: none;
 }
 nav, footer, header, aside {
     display: block;
@@ -21,9 +16,10 @@ html, body {
     width: 100%;
     line-height: 1;
     font-size: 16px;
-    -ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
 		-moz-text-size-adjust: 100%;
-			-webkit-text-size-adjust: 100%;
+	 		-ms-text-size-adjust: 100%;
+				text-size-adjust: 100%;
 }
 input, button, textarea {
     font-family: inherit;
@@ -38,8 +34,7 @@ button::-moz-focus-inner {
     padding: 0px 0px;
     border: 0;
 }
-a,
-a:visited {
+a, a:visited {
 	color: #ffffff;
   	text-decoration: none;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -65,7 +60,6 @@ noscript {
 	bottom: 0px;
 	left: 0px;
 	width: 100%;
-	z-index: 100;
 	background-color: rgba(0, 0, 0, 0.97);
 	z-index: 9999999999999999;
 }
@@ -106,19 +100,13 @@ body._lock {
 	top: 0px;
 	left: 0px;
 	width: 100%;
-	z-index: 10000;
+	z-index: 90;
 	background-color: #000000;
 }
 .header__body {
-	display: -webkit-box;
-		display: -ms-flexbox;
-			display: flex;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
-	-webkit-box-align: center;
-		-ms-flex-align: center;
-			align-items: center;
+	display: flex;
+    justify-content: space-between;
+	align-items: center;
 	padding: 0px 20px;
 	min-height: 70px
 }
@@ -128,43 +116,17 @@ body._lock {
 	position: relative;
 	width: 44px;
 	height: 44px;
-	z-index: 100;
-	-webkit-box-shadow: 0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 12px #ff0000,0px 0px 26px #ff0000;
-	   		box-shadow: 0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 12px #ff0000,0px 0px 26px #ff0000;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	z-index: 91;
 	cursor: pointer;
+	box-shadow: 0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 12px #ff0000,0px 0px 26px #ff0000;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	transition: all 0.5s ease 0s;
 }
 body._pc .header__logo:hover {
-	-webkit-box-shadow: 0px 0px 5px #ff0000,0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 20px #ff0000;
-	   		box-shadow: 0px 0px 5px #ff0000,0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 20px #ff0000;
+	box-shadow: 0px 0px 9px #ff0000,0px 0px 14px #ff0000,0px 0px 22px #ff0000,0px 0px 34px #ff0000;
 }
 body._mobile .header__logo:active {
-	-webkit-box-shadow: 0px 0px 5px #ff0000,0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 20px #ff0000;
-	  		 box-shadow: 0px 0px 5px #ff0000,0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 20px #ff0000;
-}
-/* ===================================  Logo  --Start--  =================================== */
-.header__logo {
-	border-radius: 50%;
-	position: relative;
-	width: 44px;
-	height: 44px;
-	z-index: 100;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	cursor: pointer;
-	-webkit-box-shadow: 0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 12px #ff0000,0px 0px 26px #ff0000;
-	   		box-shadow: 0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 12px #ff0000,0px 0px 26px #ff0000;
-	-webkit-transition: all 0.5s ease 0s;
-		-moz-transition: all 0.5s ease 0s;
-			-o-transition: all 0.5s ease 0s;
-				transition: all 0.5s ease 0s;
-}
-body._pc .header__logo:hover {
-	-webkit-box-shadow: 0px 0px 9px #ff0000,0px 0px 14px #ff0000,0px 0px 22px #ff0000,0px 0px 34px #ff0000;
-	   		box-shadow: 0px 0px 9px #ff0000,0px 0px 14px #ff0000,0px 0px 22px #ff0000,0px 0px 34px #ff0000;
-}
-body._mobile .header__logo:active {
-	-webkit-box-shadow: 0px 0px 9px #ff0000,0px 0px 14px #ff0000,0px 0px 22px #ff0000,0px 0px 34px #ff0000;
-	   		box-shadow: 0px 0px 9px #ff0000,0px 0px 14px #ff0000,0px 0px 22px #ff0000,0px 0px 34px #ff0000;
+	box-shadow: 0px 0px 9px #ff0000,0px 0px 14px #ff0000,0px 0px 22px #ff0000,0px 0px 34px #ff0000;
 }
 /* ====================  Logo Icon  ==================== */
 .header__logo_icon {
@@ -173,37 +135,18 @@ body._mobile .header__logo:active {
 	color: #ffffff;
 	font-size: 0.8em;
 	font-weight: bold;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	user-select: none;
-	display: -webkit-box;
-		display: -ms-flexbox;
-			display: flex;
-	-webkit-box-pack: center;
-		-ms-flex-pack: center;
-			justify-content: center;
-	-webkit-box-align: center;
-		-ms-flex-align: center;
-			align-items: center;
-	-webkit-animation: animLogo 3s infinite;
-			animation: animLogo 6s infinite;
-}
-@-webkit-keyframes animLogo {
-	0% {
-		-webkit-transform: rotateY(0deg);
-		        transform: rotateY(0deg);
-	}
-	100% {
-		-webkit-transform: rotateY(360deg);
-		        transform: rotateY(360deg);
-	}
+	animation: animLogo 6s infinite;
 }
 @keyframes animLogo {
 	0% {
-		-webkit-transform: rotateY(0deg);
-		        transform: rotateY(0deg);
+        transform: rotateY(0deg);
 	}
 	100% {
-		-webkit-transform: rotateY(360deg);
-		        transform: rotateY(360deg);
+        transform: rotateY(360deg);
 	}
 }
 /* ===================================  Logo  --End--  =================================== */
@@ -234,9 +177,7 @@ body._mobile .header__logo:active {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .menu__list_sublist._active .menu__arrow {
-	-webkit-transform: rotate(-180deg);
-		-ms-transform: rotate(-180deg);
-			transform: rotate(-180deg);
+	transform: rotate(-180deg);
 }
 .menu__list_sublist-text {
 	width: 100%;
@@ -249,11 +190,11 @@ body._mobile .header__logo:active {
 	top: 100%;
 	right: 0px;
 	background-color: #000000;
-	min-width: 150px;
 	padding: 15px;
-	z-index: 100;
+	min-width: 150px;
 	border: solid 1px #303030;
 	text-align: center;
+	z-index: 91;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .menu__sub_list > li {
@@ -280,50 +221,33 @@ body._pc .menu__sub_link:hover {
 	border-left: solid 5px transparent;
 	border-right: solid 5px transparent;
 	border-top: solid 10px #ffffff;
-	-webkit-transition: transform 0.6s ease 0s;
-		-o-transition: transform 0.6s ease 0s;
-			-webkit-transition: -webkit-transform 0.6s ease 0s;
-			transition: -webkit-transform 0.6s ease 0s;
-			transition: transform 0.6s ease 0s;
-			transition: transform 0.6s ease 0s, -webkit-transform 0.6s ease 0s;
+	transition: transform 0.6s ease 0s;
 }
 /* ====================  PC for MOBILE  --Start--  ==================== */
 body._pc .menu__list > li:hover .menu__sub_list {
 	opacity: 1;
 	visibility: visible;
-	-webkit-transform: translate(0px, 0px);
-		-ms-transform: translate(0px, 0px);
-	    transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
 	pointer-events: all;
 	cursor: pointer;
 	display: block;
 }
 body._pc .menu__list > li:hover .menu__arrow {
-	-webkit-transform: rotate(-180deg);
-	    -ms-transform: rotate(-180deg);
-	        transform: rotate(-180deg);
+    transform: rotate(-180deg);
 }
 /* ===================================  Dropdown list  --End--  =================================== */
 body._mobile .menu__list > li {
-	-ms-flex: 1 1 auto;
-		-webkit-box-flex: 1;
-	        flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 body._mobile .menu__list > li {
-	display: -webkit-box;
-		display: -ms-flexbox;
-			display: flex;
-	-webkit-box-align: center;
-		-ms-flex-align: center;
-			align-items: center;
+	display: flex;
+	align-items: center;
 }
 /* ====================  PC for MOBILE  --End--  ==================== */
 /* ===================================  Menu body  --End--  =================================== */
 /* ===================================  Header  --End--  =================================== */
-/* =============================================  Zeroing  --End--  ============================================= */
 /* =============================================  here Anim  ============================================= */
 /* =============================================  here Progress Bar  ============================================= */
-/* =============================================  here Responsive  ============================================= */
 /* =============================================  Page  --Start--  ============================================= */
 .page__text {
 	padding: 8px;
